--- a/package.json
+++ b/package.json
@@ -21,7 +21,22 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
     "jest": "^26.4.2",
+    "jest-mock-axios": "^4.2.1",
+    "jest-styled-components": "^7.0.3",
     "webpack-dev-server": "^3.11.0"
+  },
+  "jest": {
+    "roots": [
+      "spec/javascript"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "app/javascript"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/spec/javascript/setup.js"
+    ]
   }
 }
